@@ -144,7 +144,7 @@ func waitFor(t *testing.T, check func() error) {
 
 type DummyDownloader struct{}
 
-func (*DummyDownloader) Download(_ context.Context, p, v string) (string, error) {
+func (*DummyDownloader) Download(_ context.Context, p, a, v string) (string, error) {
 	return "", nil
 }
 
