@@ -5,6 +5,8 @@
 package operation
 
 import (
+	"fmt"
+
 	"github.com/hashicorp/go-multierror"
 
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/configrequest"
@@ -19,6 +21,7 @@ const (
 	monitoringEnabledSubkey = "enabled"
 	logsProcessName         = "filebeat"
 	metricsProcessName      = "metricbeat"
+	artifactPrefix          = "beats"
 )
 
 func (o *Operator) handleStartSidecar(s configrequest.Step) (result error) {
@@ -133,8 +136,9 @@ func (o *Operator) generateMonitoringSteps(version string, output interface{}) [
 			ID:      stepID,
 			Version: version,
 			ProgramSpec: program.Spec{
-				Name: logsProcessName,
-				Cmd:  logsProcessName,
+				Name:     logsProcessName,
+				Cmd:      logsProcessName,
+				Artifact: fmt.Sprintf("%s/%s", artifactPrefix, logsProcessName),
 			},
 			Meta: map[string]interface{}{
 				configrequest.MetaConfigKey: fbConfig,
@@ -154,8 +158,9 @@ func (o *Operator) generateMonitoringSteps(version string, output interface{}) [
 			ID:      stepID,
 			Version: version,
 			ProgramSpec: program.Spec{
-				Name: metricsProcessName,
-				Cmd:  metricsProcessName,
+				Name:     metricsProcessName,
+				Cmd:      metricsProcessName,
+				Artifact: fmt.Sprintf("%s/%s", artifactPrefix, logsProcessName),
 			},
 			Meta: map[string]interface{}{
 				configrequest.MetaConfigKey: mbConfig,
