@@ -20,7 +20,7 @@ func init() {
 	// spec/endpoint.yml
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJzsWEuTq7gV3udn3G1SCYi2J6RqFoYeXnbT17hbEtohyQZsganGL0jlv6cEGIPdM3PvzSSrLLrsxnqcx3e+8x3++aUs1uxv65wX+zQ//LXKxJd/fKGZdSBv+zhAkx2z9YLmy/gdwC3HXsGd3TwE6u41NQTNgjMF4shNtSbIV1kmlPWyqAn2QIR88ZrOgF/HT2bm7wnyPzAQR6YFCbXPUzNVYoITEap6FqGLeI33sWvOYmZbSvS8j90MHoljnCI0URbYF6EGqwgHE7dbF2IvZ/V+Lr+7phK7OREsE9l65bbPnKCgCJ44Xk7d55ezmRsnpgWbCE1qblslfd7PFytDrG24xYAU1H6fmqk8yziHONi/prOU3Pw/sJv/abcuYRmvr3YvVrO0P9t0b3alyoFjI2eZtSOr8XOWwZpqsAoBrN3BOb9y72j9Ii8KZn7m6y/Vy6w4swxuOJoUNPeVEF3K13h/cG34RJC/IZkoyVsXO8dIuB1PXdP7PJ9Xm22rItpLF6NrzOHxwedHWyqOLkLmarEysggnG6YFFUHW4TU1ftosu+foohDsbXhmlRzBPq4MwJIgX6GaO3VtcWQOVNi5/S0CcPKaGsoaG6LLCQjRRSW4t1P63OPIbGJACuoEggn9bq1RE3QRoRac2HYfR2hy5jiou98+CN5N5Vkh8kqClp2vJKEOFEMccsdTycgn9/H8fGgfKQmCyu3/sY+LlXHiODhzvJybOd8T9DR1f0kSpljH9SrOSXYRBC/z+WqWeanhhtj3uA0PrIrFWj0UNDdU7vh8s9rFXhrGK9uq32R9Y/8cIl/MTX49P1+Ys5ygS8K0oAg1X4TY20YmK8z455+//KWlik0q1nQdPVCFhBTyRIiXV3poyjrMYMJnRVsqqUHdVLXc9By7uS+4A8+LTJR0NRE0s1Jqw91XJEPqi2bN/do8EBQbZYgDscj6VOgks0oG3tOFOUsX7+0nRdYxRFxQBI/cnBwoCMRXHB+YbW2jSs2oDQU33dI13UOwkp/eIUSThAB4IJJyBuc3KV2N1pYU8DxCk3yRXQTPYPkVBSLMYe4KZc5yWLawUmKSiSes+QrLYELf9vFaUyQ0CpoVEgqSjnYEx1eINFB+TQ15ft3CVRyjDG65pdfc8USI1A1zvJOkAAb06lomFEw2IdCPJLsUobZsSwXAilt6QvJAsG4dd8RZ5ovaes7ODUwPIZ7dUZ/Rwealg7mnUhsOqM7YUs2YYGCV1NIVquplhH3l+ntHA6fX1LjaXN9o4zNbJyeqzeb9XlPSsi+Ys5y6Vple6YJVTewL0uTN6zHTYsSoKPAF03xZXile3tmqBScMLgXTltOhLREOhMzLMKbX0vt+P/qYpwSRE8ve5xIDrMGS2rc4knsneecdxSi0vj3rfT53bcoJqhD5SutDsGnsvlHXXd78O3uNQlLCox/jO1u8qQl7vmsNd5R0w3dHWY1tk5raltK3FXNk14Ciu9gh68xsWI0wI59LXNYtPofrXbOpiVYqNPXB5sN9rg1BU7ddK3fty4mcx2cTTATNl1IG7CJJo46vEFsc7+6R9Xzkpq6E2mzqOsGWzT4/h6Pg/JoaKnFmd7ZcTqTSdxT4H5L+XTs4heDQ1+DQ14XmCWKLGmt+STUu/Zq6Tvvs0X92Ypqo5T6ZyzX2B3FocHagGhEYHMR6nIe2fTmwJlDv28k377ODhNtWTX5sz5EO2s0NM56gSAcE6s36UU22bX0X4iBhACqLbJJQ1NaSlC7chhXW7lqv4wtqwy239eqBv+zGxpb7Ol64lxmLlTGOZYuRW1tHwXmA9x4Ti5VxzfMwNrsIvwzOanN22/9S39r9RHCblFS73R05gcLsoqbgdj+tX4CPLJXYYiAVrCnHnmjxGOw5utkQgovEZ0Y1KX+8yW0PP1HAS4INNcx9Nbz5/xEi8hH+53Ks5+VflWROUPEunyHQzz1+bFJRoDycy+2/TxvZZsOUIGss47aP+R/KMTLQJX0sNajI828xOYg1lj55YiyxhEKQWs9N+BMCt/sXWWefquoD2fUqOZ5pRhKC970HdJU7hspNVromF9S2am6LLQMwYZm/96pz7HW171VnaVseASuLwC+NDGt4UJP4j/P5ct/Lr2x9+EjZJwLsDUGFZWLbCa4tRbIhqYI7XhGCTpi1M1OMql7I1AQHKjMnBbWVI0GTJJR68lnNQnSp70TPda0Myrkh+98Tbpma0MzKCVIlYR4p0nfkTX1aYBmk8tBp198SbrfzcQOa8VpbzwkQR1JNyqYIntUdQZ5KKo9/Nu+1yVZPPIPjGWg0d6on4jQN7khMXZKsQpByXCO1dHsCNxQZSyJnHNOT4rIRSIts2RC0bLaLXByoOdlF2G9jarp/hDA8EBxUEfL/u+Kww1InPiqJC4r6+ThjmX54FImNUHoUIL8nKq4xwP8Xm3+E2CQ4UVhmSUw0ccKgJbH79yufCM2xjXfPWxLuifnTJoE1XnA72bAM5gQn5+udn8zplcQZTp8+FqDjKO1l95tz+P92dv+RoUjG/cjAJeE23HAglMjSK4K4WDuzEQ6uORgKku5MWePr+bO+/OoEE2a//3mRlsVjjNq/5o7nfey1a4cCZDRwjJrraO1tCJDczNHlJtBsNYkA3ITYq8J7gdZhpOcJ0DfTAVauNsvh/eU7hONg301kVQS1vN1gaeRXK+763vU9e2xLCfF33nPdY06aGP+4oIU1s60tWX773Rz7Al+FxazBacM33zJY0pE++E1ev/aYsdgZ8UDfI0ei/FEkesP6GJ17w1nvTy9ECZY9VK9kLXKQCLrdN++tVu3Qu/fwgY78aV/wNPWIsVK4Zpi1Am4Q51WcX4VfI74ALEPsK7KXEmRVIYjzRWMDrwgKClY1wq0Vxavme/NSRg41/Tuxf/3p3wEAAP//5uHUJw==")
+	unpacked := packer.MustUnpack("eJy8mFuToziWx9/3Y9TrbuyCKOc2E9EPhmxudpJlnCkJvSHJBmwJuwt8gYn57hPiYoOzqrurZ6YfMjJNCulc/uecn/z3T+Vxw/5vU/DjIS+q/62l+PS3T1Q6FXk7pBGa7ZlrHmmxSt8B3HEcHLm3X8RA37/mlqAyulAgTtzWG4JCnUmhbVbHjBXRkUhnx58PKbnvUREXArsIBSvIMQbvT/5zbLw+p4sYZCIG1TZBs4a7TkmfD4vl2hIbF+4wIEfqvj/Z+Tz1besS4+jwms/z8b7sblver8uY5M1rekh9e54u1/OcS1gniMz8/hl3RUWQqSsbX5r5grlmwx21X6jF6Fq+pofKd+FngsItkaIkb4eFes/3rIy76ZNvB9/2f+1361ynJsZLb/e88u3gtrc/smu51nXm8jpGkXh4XhMcnjkOdgS/5KN9vnPuZP1pI8Xlm76++Re7sGoCTZ1KcWJGlFH38mTnWkpwJmLdlAm6iiF2zHW05PmQ+hKeiGedEzTTljgUsQHrBEe3eMY4KFjTx2iIOZp98PmjLYFOXdh08SbHjWM23AtEjLQn36tMu39OvUgwYYIYXXWCh7haDUFXERvRme0OaYJmF46jpv/fV4L3T74XzZj73ueOZNSD4m6nNtbnoo2BFCV3YY2Nh7VeKKgLd9w169fcOtLC0rn30ue6Epu3VutZLK+CzHtfpVNyBEc6tDRWQDHxafdx/4l9aj+8un2e+jivfNfUuWfpfH5YcJAJujuka9dpVmg2W9hcUhcKbrOjb8fS/yXLmCY0gvRmYcP/R0CcmAc1puvmYj2XQW75MQ5fY6QLZlhZDN4PAej3t1np21xQ12m4K3YMwIzJ8BDU+8Wn/+nayDYXG7pJPrQRVT4oEDFeDa2jlVgsYcbnx65Uc4v6ue74+SX1i1BwD16WUpR0PRNUOjl14f4LUikJRbvmcW0RCYqtMsaRWEp4ilFQErQyiXRKBt7zpT3Pl+/db4qcU4y4oAieuD2rKIjEF5xWzHV2Sa33IfNL3/araK1+B1WMZhkBsCJK/qP9uRfoZD1ZW1LAiwTNiqW8Ci5h+QVFIi5g4QttEeNASxDJYmP15LsqJlGzbFsczAlytN8th7yVwK8EhRoG4kRc+HmQF/fERcWbumbBLm0LPVJ5VOWxZUZUE+RU2LBqCkLBjPB8k55rnjAIz1SSMkGh1slbteloGyOiEdy3tK6Unnz3eibGS1suFDmXx1bxUIY1R9dJycXAvGygmVH3uuWuuaWuaPjzvXX4tqXR5pAONrPLIb3976OtJwrMS18O7Q/B2Y5gS2s1VYQakzCj+KXNfYJW7e9bqbZ5Di5MmjuCw4YaQaPy9GCrRnWzTHCoDb52tqhSUnkZxbR4+bN+3GMuoaRG0LUJT7X7to76XJGaAu3Jd/vSvQxt9af7M+Pm86Jv6xpT49jpfMCgawHfy9ujvQmOBH376MfkzE5vVYznD6P6oVV6N33fW6J0TgxcM34b8/OJXa2uV+PY6RnzrHvrvD1vddnpcxxre97WRD/G27/H5/i2per0xO1+9OVWSQF72BuCtvaNUCOuOL3mVsPd6EjT6TkEE0GL1Zm74eU1t7TYmH9nH7hnyjcUXR5sUWefiWvuEgDVqNlTEH691eDY19qsCYqOTDcb6pqG8us1t7pn3/B/aYQzBq5n0mpSNKM4dDpDJiDQbMfm2KYEwNlrbukMwC01oKby/QPv7WMcZQz8uXeWcpZRBBvVmwcNLNfKR/3MJdy26yc12Y9i19FiHApuz05qnP2nMWIay04j989wz+Z3vd81oaVDnsexIa5oRnt1Obvc3m9e7n+fCI6kyv0dBzKNe9avDJj3892fmnAHM46iI7/bkW0KWBPU6THx4B0x3bCkBtwTqRAxqjf3uBcUmAV14YWjoOHIv2MJcGQCfvmLESo8M2/QjyWZNKuP/SY6T3mj7VPqs5prH/NfjJDdHc3lj7g12POVYNEon8jqaCQuVL1BYVTAXVixOhUbvbqfb896+0K+Xe/TII9bXHtTPR6HlxiFYmHzM8fRheNVsbTnBUHXjBnRMTZCEeNgl3Qo1tV5zUplWwCqjMgqC+pLGii9GKHS/wTP5Kb6mrNvANobghqTYtcD2Y4iBSe64F5wjEEPbh3fp6i+gU5DcKQz5ZCrnW6Je9ZljK7NAxQNa9XguVDX0cjvgZ3UMyqdgiBdNdQTReaevOmfl1hxaVn1XPxbYHffH0c1Rw8QqAaCAqh6VrZN+1nfExTopA64LZ2au0LG3WBuBcBqsyI4qhMU9qBmnZkRTe6snUC6xjS5M07uUfqZeLBUdzRim80GhwoiThuk3+5IChxUvAleqXumAtR2aC7l6qwatxLWshAVtWf7BIcDyCxY0e771BfhZzyAwNsh3RjaBAgTNNsTnA4FoG2wpQbf4GPTFZg4JRIqcOghVN8yLzjHADYMmPVQlBTMtjEwT0Rejx3YihMDsOaOmZEiEuwRUHu99dBQK+1Q9P5HCnkonsGe3k49Y88P9/NvwNB3AGRHDWuGgVNS5zug1519P3M0sD76PjvTydC3xMYNBfNWT75T5jeIqtu6OPYAetNqd6mZAGWOVw+2GtEZg+uRGavp8BxAbZSjCQj8kB+3HOYEkTOT7381TPZNOtgOQwAb/MjdbMskLAjObhePHhpaDQ+XDqUznH/+ugR9HzNe9r857P9VQHBvl8LvQkJ7WVz9O0AZbjkQWuIoAORi483/GDh7garxzeLZXH3pgOa/l3l5/Bij7qc94/mQBmP4sbWUtRdgXUzBq7+YTNbeL0Gqf6uL4H2Q6lkC4DbGQR0/QmCvkVufuMPjSCuDzaG4xayzraIGERi0QDG2o8/T6L35DwDlA5j8EIT+mXcGcP0LoZnjUGBw/z5p6DfDWlIEZ5WXB/33+R0zxG/29ckcXcpvXWRvM3IClLceA2BJUKipy/qoPqbz+Q8B2/Q7s7XSHX45BLiiE3+6L4naesRYG32XNorzOi2Gy1EHYbCMcaipWUqQU8cgLZatDXdw823+NUbka7xu/y4p4IolmsRmRzv9+edP//ivfwYAAP//Yq/3CA==")
 	SupportedMap = make(map[string]Spec)
 
 	for f, v := range unpacked {
