@@ -21,8 +21,8 @@ type Config struct {
 	// Architecture: target architecture [32, 64]
 	Architecture string `json:"-" config:",ignore"`
 
-	// BeatsSourceURI: source of the artifacts, e.g https://artifacts.elastic.co/downloads/beats/
-	BeatsSourceURI string `json:"sourceURI" config:"sourceURI"`
+	// SourceURI: source of the artifacts, e.g https://artifacts.elastic.co/downloads/
+	SourceURI string `json:"sourceURI" config:"sourceURI"`
 
 	// TargetDirectory: path to the directory containing downloaded packages
 	TargetDirectory string `json:"targetDirectory" config:"target_directory"`
@@ -49,7 +49,7 @@ type Config struct {
 func DefaultConfig() *Config {
 	dataPath := paths.Data()
 	return &Config{
-		BeatsSourceURI:  "https://artifacts.elastic.co/downloads/beats/",
+		SourceURI:       "https://artifacts.elastic.co/downloads/",
 		TargetDirectory: filepath.Join(dataPath, "downloads"),
 		Timeout:         30 * time.Second,
 		PgpFile:         filepath.Join(dataPath, "elastic.pgp"),
