@@ -18,7 +18,7 @@ type FailingDownloader struct {
 	called bool
 }
 
-func (d *FailingDownloader) Download(ctx context.Context, a, b string) (string, error) {
+func (d *FailingDownloader) Download(ctx context.Context, a, b, c string) (string, error) {
 	d.called = true
 	return "", errors.New("failing")
 }
@@ -29,7 +29,7 @@ type SuccDownloader struct {
 	called bool
 }
 
-func (d *SuccDownloader) Download(ctx context.Context, a, b string) (string, error) {
+func (d *SuccDownloader) Download(ctx context.Context, a, b, c string) (string, error) {
 	d.called = true
 	return "succ", nil
 }
@@ -58,7 +58,7 @@ func TestComposed(t *testing.T) {
 
 	for _, tc := range testCases {
 		d := NewDownloader(tc.downloaders[0], tc.downloaders[1])
-		r, _ := d.Download(nil, "a", "b")
+		r, _ := d.Download(nil, "a", "b", "c")
 
 		assert.Equal(t, tc.expectedResult, r == "succ")
 
