@@ -16,6 +16,7 @@ import (
 // Descriptor defines a program which needs to be run.
 // Is passed around operator operations.
 type Descriptor struct {
+	artifactName string
 	executionCtx ExecutionContext
 	directory    string
 	spec         ProcessSpec
@@ -27,6 +28,7 @@ func NewDescriptor(pSpec program.Spec, version string, config *artifact.Config, 
 	dir := directory(binaryName, version, config)
 
 	return &Descriptor{
+		artifactName: pSpec.Artifact,
 		directory:    dir,
 		executionCtx: NewExecutionContext(pSpec.ServicePort, binaryName, version, tags),
 		spec:         spec(dir, binaryName),
@@ -37,6 +39,11 @@ func NewDescriptor(pSpec program.Spec, version string, config *artifact.Config, 
 // 0 then the application is ran using the `service` application type, versus a `process` application.
 func (p *Descriptor) ServicePort() int {
 	return p.executionCtx.ServicePort
+}
+
+// ArtifactName is the name of the artifact to download from the artifact store. E.g beats/filebeat.
+func (p *Descriptor) ArtifactName() string {
+	return p.artifactName
 }
 
 // BinaryName is the name of the binary. E.g filebeat.
