@@ -1,6 +1,7 @@
 name: Filebeat
 cmd: filebeat
 args: ["-E", "setup.ilm.enabled=false", "-E", "setup.template.enabled=false", "-E", "management.mode=x-pack-fleet", "-E", "management.enabled=true", "-E", "logging.level=debug"]
+artifact: beats/filebeat
 rules:
 - fix_stream: {}
 - inject_index:
